# llama_fine_tuning

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  additional_works.drawio  mlartifacts.dvc  mlruns.dvc  pyproject.toml
.dvc/: config
infra/terraform/: main.tf  provider.tf
mlruns/.trash/191018617488742626/: meta.yaml
mlruns/.trash/409299786179200491/: meta.yaml
mlruns/.trash/464758757168430394/: meta.yaml
mlruns/.trash/778970336054806026/: meta.yaml
mlruns/.trash/821275711990790082/: meta.yaml
mlruns/.trash/915121825807552716/: meta.yaml
mlruns/.trash/970454797943227266/: meta.yaml
mlruns/.trash/998947793141396237/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/159fb6bdf0be4ba890e447520c732c85/: meta.yaml
mlruns/0/1aa1831733674c3883d929ca1994467a/: meta.yaml
mlruns/0/2075cede197b488cab45e8493c08f434/: meta.yaml
mlruns/0/23997c7378024bdcb1e2caaf0f8a0e55/: meta.yaml
mlruns/0/23a04e381a7c45f9a28f9b2e0ab3a02c/: meta.yaml
mlruns/0/3360d4746f3f4db6a869aab8848c8cef/: meta.yaml
mlruns/0/346842dc30044886b707477799d1adb0/: meta.yaml
mlruns/0/352f5803c4824fbfbf123875ea74f9a2/: meta.yaml
mlruns/0/38cb092176944193ab5a2d3e896959ec/: meta.yaml
mlruns/0/3a32fc2711464732b456b3e19129ce50/: meta.yaml
mlruns/0/3c064bbfa21d43fbba98ec73140ec544/: meta.yaml
mlruns/0/40035412cc0e41af801be70048af5c55/: meta.yaml
mlruns/0/4296ff47acdd4d91856ec2b4a4e525ad/: meta.yaml
mlruns/0/472cf893f81b40e4b7a6c9d66175cfc8/: meta.yaml
mlruns/0/47dda79289c1425eaffead93b7a2db60/: meta.yaml
mlruns/0/4ca72fa074a74fbeb4332c2031082113/: meta.yaml
mlruns/0/535cabf6483d47d5af53911603789d3c/: meta.yaml
mlruns/0/540a96697b7542039fc064028fca5795/: meta.yaml
mlruns/0/5fa3b0963d8a4a43ae4bd5e26d2ff32a/: meta.yaml
mlruns/0/618e56edc7b4427a8a39a2e2b230fb08/: meta.yaml
mlruns/0/66caf279b1114dde93af0798425fb4aa/: meta.yaml
mlruns/0/680eb2a9553140eb9d2794909009fde3/: meta.yaml
mlruns/0/71915a1ec881451e8e2300c819687263/: meta.yaml
mlruns/0/7202032de1ee4576befc5d8857ba101b/: meta.yaml
mlruns/0/745c6f7b1cdf42728f5cfdbc2f839312/: meta.yaml
mlruns/283380822444086941/: meta.yaml
mlruns/302652763951497230/: meta.yaml
src/: .gitignore  checkpoints.dvc  data.dvc  finetuning.ipynb  models.dvc  process_training_file.py  raw_data.dvc
src/data/: test.csv  val.csv
src/evaluate/: evaluate.py
src/evaluate_llm/: evaluate.py
src/train/: fine_tune.py  log_base_model.py  system_prompt.py
(+31149 files in other folders)
