[project]
name = "tomorrow-llm-tech"
version = "0.1.0"
description = "ChainLit LLM interface to compare documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]
[dependency-groups]
dev = [
    "notebook>=7.3.3",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.isort]
profile = "black"
src_paths = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    # pydocstyle
    "D",
    # Google style
    "G",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-annotations
    "ANN",
]

ignore = [
    # flask8-annotations for self
    "ANN101",
    "ANN102",
    "ANN204",
    "G004",
    "D100",
    "D107"
]

exclude = [
    "*.ipynb",
    "__init__.py"
]


[tool.ruff.lint.pydocstyle]
convention = "google"
