[project]
name = "tomorrow-llm-tech"
version = "0.1.0"
description = "ChainLit LLM interface to compare documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.1",
    "dotenv>=0.9.9",
    "dvc>=3.59.2",
    "dvc-s3>=3.2.0",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.30.2",
    "llama-stack>=0.2.5",
    "loguru>=0.7.3",
    "mlflow>=2.22.0",
    "optimum-quanto>=0.2.7",
    "peft>=0.15.2",
    "rouge-score>=0.1.2",
    "sentencepiece>=0.2.0",
    "textstat>=0.7.5",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "trl>=0.17.0",
]
[dependency-groups]
dev = [
    "notebook>=7.3.3",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.isort]
profile = "black"
src_paths = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    # pydocstyle
    "D",
    # Google style
    "G",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-annotations
    "ANN",
]

ignore = [
    # flask8-annotations for self
    "ANN101",
    "ANN102",
    "ANN204",
    "G004",
    "D100",
    "D107"
]

exclude = [
    "*.ipynb",
    "__init__.py"
]


[tool.ruff.lint.pydocstyle]
convention = "google"
